@@ -668,9 +668,7 @@ Except see also BREAK-VICIOUS-METACIRCLE.  -- CSR, 2003-05-28
 (declaim (inline make-callable))
 (defun make-callable (gf methods generator method-alist wrappers)
   (declare (ignore gf))
-  (let* ((*applicable-methods* methods)
-         (callable (function-funcall generator method-alist wrappers)))
-    callable))
+  (function-funcall generator method-alist wrappers))
 
 (defun make-dispatch-dfun (gf)
   (values (get-dispatch-function gf) nil (dispatch-dfun-info)))
