@@ -1214,6 +1214,54 @@
                    :font 'baskerville :pixel-size 10)
             'baskerville))
 
+;;; consequences of 7.6.5.1 on EQL-specialized effective methods
+;;; (reported by Syll, lp#1760987)
+(defgeneric eqls1760987 (x &key k1))
+(defmethod eqls1760987 ((x (eql 1)) &key k1 k2)
+  (list x k1 k2))
+(defmethod eqls1760987 ((x (eql 2)) &key k1 k3)
+  (list x k1 k3))
+(defmethod eqls1760987 ((x integer) &key k1 k4)
+  (list x k1 k4))
+
+(with-test (:name :bug-1760987)
+  (assert (equal (eqls1760987 1) '(1 nil nil)))
+  (assert (equal (eqls1760987 1 :k1 2) '(1 2 nil)))
+  (assert (equal (eqls1760987 1 :k2 2) '(1 nil 2)))
+  (assert (equal (eqls1760987 1 :k1 2 :k2 3) '(1 2 3)))
+  (assert (equal (eqls1760987 1 :k4 4) '(1 nil nil)))
+  (assert (equal (eqls1760987 1 :k1 2 :k4 4) '(1 2 nil)))
+  (assert (equal (eqls1760987 1 :k2 2 :k4 4) '(1 nil 2)))
+  (assert (equal (eqls1760987 1 :k1 2 :k2 3 :k4 4) '(1 2 3)))
+  (assert (equal (eqls1760987 2) '(2 nil nil)))
+  (assert (equal (eqls1760987 2 :k1 2) '(2 2 nil)))
+  (assert (equal (eqls1760987 2 :k3 2) '(2 nil 2)))
+  (assert (equal (eqls1760987 2 :k1 2 :k3 3) '(2 2 3)))
+  (assert (equal (eqls1760987 2 :k4 4) '(2 nil nil)))
+  (assert (equal (eqls1760987 2 :k1 2 :k4 4) '(2 2 nil)))
+  (assert (equal (eqls1760987 2 :k3 2 :k4 4) '(2 nil 2)))
+  (assert (equal (eqls1760987 2 :k1 2 :k3 3 :k4 4) '(2 2 3)))
+  (assert (equal (eqls1760987 3) '(3 nil nil)))
+  (assert (equal (eqls1760987 3 :k1 2) '(3 2 nil)))
+  (assert (equal (eqls1760987 3 :k4 2) '(3 nil 2)))
+  (assert (equal (eqls1760987 3 :k1 2 :k4 3) '(3 2 3)))
+  (assert-error (eqls1760987 1 :k3 5) program-error)
+  (assert-error (eqls1760987 1 :k1 2 :k3 5) program-error)
+  (assert-error (eqls1760987 1 :k2 2 :k3 5) program-error)
+  (assert-error (eqls1760987 1 :k1 2 :k2 3 :k3 5) program-error)
+  (assert-error (eqls1760987 2 :k2 5) program-error)
+  (assert-error (eqls1760987 2 :k1 2 :k2 5) program-error)
+  (assert-error (eqls1760987 2 :k3 2 :k2 5) program-error)
+  (assert-error (eqls1760987 2 :k1 2 :k3 3 :k2 5) program-error)
+  (assert-error (eqls1760987 3 :k3 5) program-error)
+  (assert-error (eqls1760987 3 :k1 2 :k3 5) program-error)
+  (assert-error (eqls1760987 3 :k4 2 :k3 5) program-error)
+  (assert-error (eqls1760987 3 :k1 2 :k2 3 :k3 5) program-error)
+  (assert-error (eqls1760987 3 :k2 5) program-error)
+  (assert-error (eqls1760987 3 :k1 2 :k2 5) program-error)
+  (assert-error (eqls1760987 3 :k4 2 :k2 5) program-error)
+  (assert-error (eqls1760987 3 :k1 2 :k3 3 :k2 5) program-error)
+  )
 ;;; class redefinition shouldn't give any warnings, in the usual case
 (defclass about-to-be-redefined () ((some-slot :accessor some-slot)))
 (handler-bind ((warning #'error))
